--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,22 @@
     <string name="app_name">Vacation Planner</string>
     <string name="vacation_name">%s</string>
     <string name="vacation_dates">From %s to %s</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="excursion_name">Excursion Name</string>
+    <string name="description">Description</string>
+    <string name="date">Date</string>
+    <string name="name">Name</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="accommodations">Accommodations</string>
+    <string name="vacation_planner">Vacation Planner</string>
+    <string name="welcome_instructions">Touch the button below to begin planning your dream vacation!</string>
+    <string name="get_started">Get Started</string>
+    <string name="background_img_description">palm tree on tropical beach</string>
+    <string name="fab_button_description">plus sign</string>
+    <string name="excursions">Excursions</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="share">Share</string>
+    <string name="notify">Notify</string>
 </resources>
