--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="delete">Delete</string>
     <string name="share">Share</string>
     <string name="notify">Notify</string>
+    <string name="search">Search</string>
 </resources>
