--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="share">Share</string>
     <string name="notify">Notify</string>
     <string name="search">Search</string>
+    <string name="generate_report">Generate Report</string>
 </resources>
