--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="notify">Notify</string>
     <string name="search">Search</string>
     <string name="generate_report">Generate Report</string>
+    <string name="log_in">Log In</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
 </resources>
